unpackaged/main/default/objects/Job__c/fields/Financier_Blockers__c.field-meta.xml
<CustomField>
    <fullName>Financier_Blockers__c</fullName>
    <label>Financier Blockers</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Missing Lease/PPA</fullName>
            </value>
            <value>
                <fullName>Unsigned/Incorrectly signed docs</fullName>
            </value>
            <value>
                <fullName>Revised Work Order</fullName>
            </value>
            <value>
                <fullName>Missing Change Order/Lease Amendment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>