unpackaged/main/default/objects/Job__c/fields/Financier_M0_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Financier_M0_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Financier M0 Submitted</label>
    <type>Checkbox</type>
</CustomField>