unpackaged/main/default/objects/Job__c/fields/Financier_Requirements_Met__c.field-meta.xml
<CustomField>
    <fullName>Financier_Requirements_Met__c</fullName>
    <label>Financier Requirements Met</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Jobs_Global_Pick_List</valueSetName>
    </valueSet>
</CustomField>