unpackaged/main/default/objects/Job__c/fields/Financier_System_ID__c.field-meta.xml
<CustomField>
    <fullName>Financier_System_ID__c</fullName>
    <label>Financier System ID</label>
    <type>TextArea</type>
</CustomField>