unpackaged/main/default/objects/Job__c/fields/Financing_Tool__c.field-meta.xml
<CustomField>
    <fullName>Financing_Tool__c</fullName>
    <label>Financing Tool</label>
    <length>255</length>
    <type>Text</type>
</CustomField>