unpackaged/main/default/objects/Job__c/fields/Flow_Status__c.field-meta.xml
<CustomField>
    <fullName>Flow_Status__c</fullName>
    <label>Flow Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Pending Customer Self Activation</fullName>
            </value>
            <value>
                <fullName>Change Order Pending</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Submission Not Required (Non Carolina Markets)</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Preparing</fullName>
            </value>
            <value>
                <fullName>Sent for Signature</fullName>
            </value>
            <value>
                <fullName>Submitted/Sent to HO</fullName>
            </value>
            <value>
                <fullName>Change Order Complete</fullName>
            </value>
            <value>
                <fullName>Design Outsourced</fullName>
            </value>
            <value>
                <fullName>Professional Engineering Stamp</fullName>
            </value>
            <value>
                <fullName>Final Review</fullName>
            </value>
            <value>
                <fullName>Site Approved</fullName>
            </value>
            <value>
                <fullName>Installation Complete- Pending Scheduling</fullName>
            </value>
            <value>
                <fullName>Inspection Pending Customer</fullName>
            </value>
            <value>
                <fullName>Scheduling Pending As-Builts/Redesign</fullName>
            </value>
            <value>
                <fullName>Inspection Pending Inspector</fullName>
            </value>
            <value>
                <fullName>Inspection Pending Affidavit</fullName>
            </value>
            <value>
                <fullName>Inspection Pending Utility</fullName>
            </value>
            <value>
                <fullName>Inspection Scheduling Blocked</fullName>
            </value>
            <value>
                <fullName>Inspection Scheduled</fullName>
            </value>
            <value>
                <fullName>Inspection Failed</fullName>
            </value>
            <value>
                <fullName>Pending Remediation/Corrections</fullName>
            </value>
            <value>
                <fullName>Inspection Complete</fullName>
            </value>
            <value>
                <fullName>Inspection Complete- Pending Inspection Documentation</fullName>
            </value>
            <value>
                <fullName>Inspection Complete-Pending WO Close Out</fullName>
            </value>
            <value>
                <fullName>Virtual Survey Sent to Customer</fullName>
            </value>
            <value>
                <fullName>Virtual Survey Received- Pending Review</fullName>
            </value>
            <value>
                <fullName>Additional Photos Needed</fullName>
            </value>
            <value>
                <fullName>Physical Survey Required - Palmetto Requested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>