unpackaged/main/default/objects/Job__c/fields/Fourth_Interconnection_Kickback_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Fourth_Interconnection_Kickback_Reasons__c</fullName>
    <label>Fourth Interconnection Kickback Reasons</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Data Entry</fullName>
            </value>
            <value>
                <fullName>Customer Issue/Hold</fullName>
            </value>
            <value>
                <fullName>Customer Incorrect Signature</fullName>
            </value>
            <value>
                <fullName>Engineering – Site Plan</fullName>
            </value>
            <value>
                <fullName>Engineering – One line</fullName>
            </value>
            <value>
                <fullName>Engineering – Tech Sheet</fullName>
            </value>
            <value>
                <fullName>Engineering – Customer Name</fullName>
            </value>
            <value>
                <fullName>System Size</fullName>
            </value>
            <value>
                <fullName>Third-Party Supplier Breakage</fullName>
            </value>
            <value>
                <fullName>Incorrect CRC Document(s)</fullName>
            </value>
            <value>
                <fullName>Transformer Upgrade</fullName>
            </value>
            <value>
                <fullName>New Document Required</fullName>
            </value>
            <value>
                <fullName>Utility Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>