unpackaged/main/default/objects/Job__c/fields/Free_Term_provided__c.field-meta.xml
<CustomField>
    <fullName>Free_Term_provided__c</fullName>
    <label>Free Term provided</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3 month</fullName>
            </value>
            <value>
                <fullName>6 month</fullName>
            </value>
            <value>
                <fullName>12 month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>