unpackaged/main/default/objects/Job__c/fields/Front_of_home__c.field-meta.xml
<CustomField>
    <fullName>Front_of_home__c</fullName>
    <label>Front of home</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Missing Street Numbers</fullName>
            </value>
            <value>
                <fullName>Not Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>