unpackaged/main/default/objects/Job__c/fields/Front_of_home_Score__c.field-meta.xml
<CustomField>
    <fullName>Front_of_home_Score__c</fullName>
    <formula>CASE( Front_of_home__c , "Complete", 2, "Missing Street Numbers", 1, "Not Completed", 0, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Front of home - Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>