unpackaged/main/default/objects/Job__c/fields/GDrive_Link__c.field-meta.xml
<CustomField>
    <fullName>GDrive_Link__c</fullName>
    <formula>Opportunity__r.GDrive_Link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GDrive Link</label>
    <type>Text</type>
</CustomField>