unpackaged/main/default/objects/Job__c/fields/Glare_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Glare_Analysis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Glare Analysis</label>
    <type>Checkbox</type>
</CustomField>