unpackaged/main/default/objects/Job__c/fields/Green_Bank_Incentive_Amount__c.field-meta.xml
<CustomField>
    <fullName>Green_Bank_Incentive_Amount__c</fullName>
    <label>Green Bank Incentive Amount</label>
    <type>Date</type>
</CustomField>