unpackaged/main/default/objects/Job__c/fields/Grount_Mount__c.field-meta.xml
<CustomField>
    <fullName>Grount_Mount__c</fullName>
    <label>Grount Mount</label>
    <type>Date</type>
</CustomField>