unpackaged/main/default/objects/Job__c/fields/Hard_Quote_Full__c.field-meta.xml
<CustomField>
    <fullName>Hard_Quote_Full__c</fullName>
    <label>Hard Quote Full</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>