unpackaged/main/default/objects/Job__c/fields/HIC_Contract_Issue_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>HIC_Contract_Issue_Received_Date__c</fullName>
    <label>HIC / Contract Issue Received Date</label>
    <type>Date</type>
</CustomField>