unpackaged/main/default/objects/Job__c/fields/HIC_Contract_Issue_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>HIC_Contract_Issue_Requested_Date__c</fullName>
    <label>HIC / Contract Issue Requested Date</label>
    <type>Date</type>
</CustomField>