unpackaged/main/default/objects/Job__c/fields/High_PPW_Costbreakdown_request__c.field-meta.xml
<CustomField>
    <fullName>High_PPW_Costbreakdown_request__c</fullName>
    <label>High PPW / Costbreakdown request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Financier_Stips</valueSetName>
    </valueSet>
</CustomField>