unpackaged/main/default/objects/Job__c/fields/HO_Does_Not_Want_to_Proceed__c.field-meta.xml
<CustomField>
    <fullName>HO_Does_Not_Want_to_Proceed__c</fullName>
    <label>HO Does Not Want to Proceed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Does not want to appeal</fullName>
            </value>
            <value>
                <fullName>Does not want redesign</fullName>
            </value>
            <value>
                <fullName>Is no longer interested</fullName>
            </value>
            <value>
                <fullName>Does not want to fight with HOA</fullName>
            </value>
            <value>
                <fullName>HO request</fullName>
                <isActive>false</isActive>
                <label>HO request</label>
            </value>
            <value>
                <fullName>HOA rules may change</fullName>
                <isActive>false</isActive>
                <label>HOA rules may change</label>
            </value>
            <value>
                <fullName>HOA will decide later</fullName>
                <isActive>false</isActive>
                <label>HOA will decide later</label>
            </value>
            <value>
                <fullName>Rule change in process</fullName>
                <isActive>false</isActive>
                <label>Rule change in process</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>