unpackaged/main/default/objects/Job__c/fields/HOA__c.field-meta.xml
<CustomField>
    <fullName>HOA__c</fullName>
    <formula>Opportunity__r.HOA_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HOA</label>
    <type>Text</type>
</CustomField>