unpackaged/main/default/objects/Job__c/fields/HOA_Approval_Received__c.field-meta.xml
<CustomField>
    <fullName>HOA_Approval_Received__c</fullName>
    <label>HOA Approval Received</label>
    <type>Date</type>
</CustomField>