unpackaged/main/default/objects/Job__c/fields/HOA_Approved__c.field-meta.xml
<CustomField>
    <fullName>HOA_Approved__c</fullName>
    <label>HOA Approved</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Original Design</fullName>
            </value>
            <value>
                <fullName>Redesign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>