unpackaged/main/default/objects/Job__c/fields/HOA_Bypass_Approved_by_HO__c.field-meta.xml
<CustomField>
    <fullName>HOA_Bypass_Approved_by_HO__c</fullName>
    <label>HOA Bypass Approved by HO</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>