unpackaged/main/default/objects/Job__c/fields/HOA_Denial__c.field-meta.xml
<CustomField>
    <fullName>HOA_Denial__c</fullName>
    <label>HOA Denial</label>
    <type>Date</type>
</CustomField>