unpackaged/main/default/objects/Job__c/fields/HOA_Disclosure__c.field-meta.xml
<CustomField>
    <fullName>HOA_Disclosure__c</fullName>
    <label>HOA Disclosure</label>
    <type>Date</type>
</CustomField>