unpackaged/main/default/objects/Job__c/fields/HOA_Neighborhood_Name__c.field-meta.xml
<CustomField>
    <fullName>HOA_Neighborhood_Name__c</fullName>
    <label>HOA/Neighborhood Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>