unpackaged/main/default/objects/Job__c/fields/HOA_Unresponsive__c.field-meta.xml
<CustomField>
    <fullName>HOA_Unresponsive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HOA Unresponsive</label>
    <type>Checkbox</type>
</CustomField>