unpackaged/main/default/objects/Job__c/fields/HOI__c.field-meta.xml
<CustomField>
    <fullName>HOI__c</fullName>
    <label>HOI</label>
    <type>Date</type>
</CustomField>