unpackaged/main/default/objects/Job__c/fields/HOI_Ameren_Only_AUP__c.field-meta.xml
<CustomField>
    <fullName>HOI_Ameren_Only_AUP__c</fullName>
    <label>HOI (Ameren Only) AUP</label>
    <type>Date</type>
</CustomField>