unpackaged/main/default/objects/Job__c/fields/HOI_Ameren_only_Illinois__c.field-meta.xml
<CustomField>
    <fullName>HOI_Ameren_only_Illinois__c</fullName>
    <label>HOI (Ameren only) Illinois</label>
    <type>Date</type>
</CustomField>