unpackaged/main/default/objects/Job__c/fields/HOI_only_if_system_is_above_11_76KW_DC__c.field-meta.xml
<CustomField>
    <fullName>HOI_only_if_system_is_above_11_76KW_DC__c</fullName>
    <label>HOI (only if system is above 11.76KW DC)</label>
    <type>Date</type>
</CustomField>