unpackaged/main/default/objects/Job__c/fields/HOI_Only_if_system_is_above_20KW_AC__c.field-meta.xml
<CustomField>
    <fullName>HOI_Only_if_system_is_above_20KW_AC__c</fullName>
    <label>HOI (Only if system is above 20KW AC)</label>
    <type>Date</type>
</CustomField>