unpackaged/main/default/objects/Job__c/fields/Home_Is_An_Approved_Type__c.field-meta.xml
<CustomField>
    <fullName>Home_Is_An_Approved_Type__c</fullName>
    <label>Home Is An Approved Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Jobs_Global_Pick_List</valueSetName>
    </valueSet>
</CustomField>