unpackaged/main/default/objects/Job__c/fields/Home_Owners_Assocation__c.field-meta.xml
<CustomField>
    <fullName>Home_Owners_Assocation__c</fullName>
    <formula>TEXT (Opportunity__r.Home_Owners_Association__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Home Owners Assocation</label>
    <type>Text</type>
</CustomField>