unpackaged/main/default/objects/Job__c/fields/Homeonwer_Install_Agreement_Signed_Cash__c.field-meta.xml
<CustomField>
    <fullName>Homeonwer_Install_Agreement_Signed_Cash__c</fullName>
    <label>Homeonwer Install Agreement Signed(Cash)</label>
    <type>Date</type>
</CustomField>