unpackaged/main/default/objects/Job__c/fields/Homeonwer_Install_Agreement_SIgned_loan__c.field-meta.xml
<CustomField>
    <fullName>Homeonwer_Install_Agreement_SIgned_loan__c</fullName>
    <label>Homeonwer Install Agreement SIgned(Loan)</label>
    <type>Date</type>
</CustomField>