unpackaged/main/default/objects/Job__c/fields/Homeowner_Decision__c.field-meta.xml
<CustomField>
    <fullName>Homeowner_Decision__c</fullName>
    <label>Homeowner Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accpets redesign</fullName>
            </value>
            <value>
                <fullName>Appeal</fullName>
            </value>
            <value>
                <fullName>Cance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>