unpackaged/main/default/objects/Job__c/fields/Homeowner_Instructions_Sent__c.field-meta.xml
<CustomField>
    <fullName>Homeowner_Instructions_Sent__c</fullName>
    <label>Homeowner Instructions Sent</label>
    <type>Date</type>
</CustomField>