unpackaged/main/default/objects/Job__c/fields/Homeowner_Must_Submit_Application__c.field-meta.xml
<CustomField>
    <fullName>Homeowner_Must_Submit_Application__c</fullName>
    <label>Homeowner Must Submit Application</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required - NC/SC</fullName>
            </value>
            <value>
                <fullName>Online Portal</fullName>
            </value>
            <value>
                <fullName>HO only communication</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>