unpackaged/main/default/objects/Job__c/fields/Homeowner_Signature_Required__c.field-meta.xml
<CustomField>
    <fullName>Homeowner_Signature_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Homeowner Signature Required</label>
    <type>Checkbox</type>
</CustomField>