unpackaged/main/default/objects/Job__c/fields/Homeowners_Association__c.field-meta.xml
<CustomField>
    <fullName>Homeowners_Association__c</fullName>
    <label>Homeowners Association</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>