unpackaged/main/default/objects/Job__c/fields/Homeowners_Insurance_Upload_SC__c.field-meta.xml
<CustomField>
    <fullName>Homeowners_Insurance_Upload_SC__c</fullName>
    <label>Homeowners Insurance Upload</label>
    <type>Date</type>
</CustomField>