unpackaged/main/default/objects/Job__c/fields/HQ_Permitting__c.field-meta.xml
<CustomField>
    <fullName>HQ_Permitting__c</fullName>
    <label>HQ Permitting</label>
    <type>TextArea</type>
</CustomField>