unpackaged/main/default/objects/Job__c/fields/ICA_Docs__c.field-meta.xml
<CustomField>
    <fullName>ICA_Docs__c</fullName>
    <label>ICA Docs</label>
    <type>Date</type>
</CustomField>