unpackaged/main/default/objects/Job__c/fields/ICA_Document_To_Upload_Notarize_Afidavit__c.field-meta.xml
<CustomField>
    <fullName>ICA_Document_To_Upload_Notarize_Afidavit__c</fullName>
    <label>ICA Document To Upload Notarize Afidavit</label>
    <type>Date</type>
</CustomField>