unpackaged/main/default/objects/Job__c/fields/IL_IPA_Rebate_SunRun__c.field-meta.xml
<CustomField>
    <fullName>IL_IPA_Rebate_SunRun__c</fullName>
    <label>IL-IPA Rebate - SunRun</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Financier_Stips</valueSetName>
    </valueSet>
</CustomField>