unpackaged/main/default/objects/Job__c/fields/Incentive_Amnt_PA__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Amnt_PA__c</fullName>
    <label>Incentive Amnt(PA)</label>
    <type>TextArea</type>
</CustomField>