unpackaged/main/default/objects/Job__c/fields/Incentive_Documents_Growth_Program_RI__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Documents_Growth_Program_RI__c</fullName>
    <label>Incentive Documents (Re Growth Packet)</label>
    <type>Date</type>
</CustomField>