unpackaged/main/default/objects/Job__c/fields/Incentive_Documents_To_Upload_Void_Check__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Documents_To_Upload_Void_Check__c</fullName>
    <label>Incentive Documents To Upload:Void Check</label>
    <type>Date</type>
</CustomField>