unpackaged/main/default/objects/Job__c/fields/Incentives__c.field-meta.xml
<CustomField>
    <fullName>Incentives__c</fullName>
    <label>Incentives</label>
    <length>255</length>
    <type>Text</type>
</CustomField>