unpackaged/main/default/objects/Job__c/fields/Incentives_Docs_at_CRC_Recevied_Date__c.field-meta.xml
<CustomField>
    <fullName>Incentives_Docs_at_CRC_Recevied_Date__c</fullName>
    <label>Incentives Docs at CRC Recevied Date</label>
    <type>Date</type>
</CustomField>