unpackaged/main/default/objects/Job__c/fields/Income_Verification__c.field-meta.xml
<CustomField>
    <fullName>Income_Verification__c</fullName>
    <label>Income Verification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Financier_Stips</valueSetName>
    </valueSet>
</CustomField>