unpackaged/main/default/objects/Job__c/fields/Incorrect_Address__c.field-meta.xml
<CustomField>
    <fullName>Incorrect_Address__c</fullName>
    <label>Incorrect Address</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Financier_Stips</valueSetName>
    </valueSet>
</CustomField>