unpackaged/main/default/objects/Job__c/fields/Incorrect_Name__c.field-meta.xml
<CustomField>
    <fullName>Incorrect_Name__c</fullName>
    <label>Incorrect Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Financier_Stips</valueSetName>
    </valueSet>
</CustomField>