unpackaged/main/default/objects/Job__c/fields/Initial_Facility_Transfer_Sent__c.field-meta.xml
<CustomField>
    <fullName>Initial_Facility_Transfer_Sent__c</fullName>
    <label>Initial Facility Transfer Sent</label>
    <type>Date</type>
</CustomField>