unpackaged/main/default/objects/Job__c/fields/Inspection_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Complete_Date__c</fullName>
    <label>Inspection Complete Date</label>
    <type>Date</type>
</CustomField>