unpackaged/main/default/objects/Job__c/fields/Inspection_Confirmed_Cleared__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Confirmed_Cleared__c</fullName>
    <label>Inspection Confirmed Cleared</label>
    <type>Date</type>
</CustomField>