unpackaged/main/default/objects/Job__c/fields/Install_Completed_Notes__c.field-meta.xml
<CustomField>
    <fullName>Install_Completed_Notes__c</fullName>
    <label>Install Completed Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>