unpackaged/main/default/objects/Job__c/fields/Install_Scheduling_Notes__c.field-meta.xml
<CustomField>
    <fullName>Install_Scheduling_Notes__c</fullName>
    <label>Install Scheduling Notes</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>