unpackaged/main/default/objects/Job__c/fields/Installation_Completion_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Installation_Completion_Start_Date__c</fullName>
    <label>Installation Completion Start Date</label>
    <type>Date</type>
</CustomField>