unpackaged/main/default/objects/Job__c/fields/Installation_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Installation_End_Date__c</fullName>
    <label>Installation Complete Date</label>
    <type>Date</type>
</CustomField>