unpackaged/main/default/objects/Job__c/fields/Installation_Reschedule_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Installation_Reschedule_End_Date__c</fullName>
    <label>Installation Reschedule End Date</label>
    <type>Date</type>
</CustomField>