unpackaged/main/default/objects/Job__c/fields/Installation_Reschedule_Reason__c.field-meta.xml
<CustomField>
    <fullName>Installation_Reschedule_Reason__c</fullName>
    <label>Installation Reschedule Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer requested</fullName>
            </value>
            <value>
                <fullName>Installation Call Off</fullName>
            </value>
            <value>
                <fullName>Scheduled in Error</fullName>
            </value>
            <value>
                <fullName>Schedule Optimization</fullName>
            </value>
            <value>
                <fullName>Delay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>