unpackaged/main/default/objects/Job__c/fields/Installation_Reschedule_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Installation_Reschedule_Start_Date__c</fullName>
    <label>Installation Reschedule Start Date</label>
    <type>Date</type>
</CustomField>