unpackaged/main/default/objects/Job__c/fields/Installation_Start_Date_Initial__c.field-meta.xml
<CustomField>
    <fullName>Installation_Start_Date_Initial__c</fullName>
    <label>Installation Start Date - Initial</label>
    <type>Date</type>
</CustomField>