unpackaged/main/default/objects/Job__c/fields/Installation_Start_Date_Observed__c.field-meta.xml
<CustomField>
    <fullName>Installation_Start_Date_Observed__c</fullName>
    <inlineHelpText>First "Installation Start Date" to have elapsed without being rescheduled, called off, or cancelled within 1 calendar day.</inlineHelpText>
    <label>Installation Start Date - Observed</label>
    <type>Date</type>
</CustomField>