unpackaged/main/default/objects/Job__c/fields/Installation_State__c.field-meta.xml
<CustomField>
    <fullName>Installation_State__c</fullName>
    <label>Installation State</label>
    <type>Date</type>
</CustomField>